cr-buildbucket: fix acl_sets
Move tryjob-access rule from "public" aclset to "tryserver".
Use "tryserver" aclset in "luci.infra.try"

Bug:
Change-Id: I1ad1b524d954e2013757816c1e8a91e2945f7355
Reviewed-on: https://chromium-review.googlesource.com/517311
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -12,15 +12,16 @@ acl_sets {
     role: READER
     group: "all"
   }
+}
+
+acl_sets {
+  name: "tryserver"
   acls {
     role: SCHEDULER
     # This whitelists largest number of people who are trusted to schedule
     # arbitrary tryjobs for unreviewed CLs.
     group: "project-chromium-tryjob-access"
   }
-}
-acl_sets {
-  name: "tryserver"
   acls {
     role: SCHEDULER
     group: "service-account-cq"
@@ -59,10 +60,7 @@ buckets {
 
 buckets {
   name: "luci.infra.continuous"
-  acls {
-    role: READER
-    group: "all"
-  }
+  acl_sets: "public"
   acls {
     role: SCHEDULER
     identity: "luci-scheduler@appspot.gserviceaccount.com"
@@ -100,6 +98,7 @@ buckets {
 buckets {
   name: "luci.infra.try"
   acl_sets: "public"
+  acl_sets: "tryserver"
 
   swarming {
     hostname: "chromium-swarm.appspot.com"
