Introduce luci.recipe_engine.try for recipe_roll_tryjob recipe
This will help experiment with new recipe roll recipe,
starting from the recipe engine.

Bug: 644609
Change-Id: I61f061bef4b2404e858cb193abb1ce4f6252e9a3
Reviewed-on: https://chromium-review.googlesource.com/544868
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -311,6 +311,52 @@ buckets {
 }
 
 buckets {
+  name: "luci.recipe_engine.try"
+  acl_sets: "public"
+  acl_sets: "tryserver"
+
+  swarming {
+    hostname: "chromium-swarm.appspot.com"
+    url_format: "https://luci-milo.appspot.com/swarming/task/{task_id}"
+
+    builder_defaults {
+      swarming_tags: "allow_milo:1"
+
+      dimensions: "pool:Infra"
+      dimensions: "os:Ubuntu-14.04"
+      dimensions: "cpu:x86-64"
+
+      recipe {
+        repository: "https://chromium.googlesource.com/infra/infra"
+        name: "recipe_roll_tryjob"
+        properties: "upstream_project:recipe_engine"
+      }
+    }
+
+    builders {
+      name: "depot_tools"
+      recipe {
+        properties: "downstream_project:depot_tools"
+      }
+    }
+
+    builders {
+      name: "build"
+      recipe {
+        properties: "downstream_project:build"
+      }
+    }
+
+    builders {
+      name: "infra"
+      recipe {
+        properties: "downstream_project:infra"
+      }
+    }
+  }
+}
+
+buckets {
   name: "master.chromium.infra"
   acl_sets: "public"
   acls {
