Rename luci.recipe_engine.try -> luci.infra.recipe_engine.try
This fixes the following luci-config validation error:

ERROR: cr-buildbucket.cfg: Bucket luci.recipe_engine.try: invalid name: Bucket must start with "luci.infra." because it starts with "luci." and is defined in the infra project

Bug: 644609
Change-Id: I67a695324c4c018ce4fbac396ad826aa93d24111
Reviewed-on: https://chromium-review.googlesource.com/544849
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -311,7 +311,7 @@ buckets {
 }
 
 buckets {
-  name: "luci.recipe_engine.try"
+  name: "luci.infra.recipe_engine.try"
   acl_sets: "public"
   acl_sets: "tryserver"
 
