Add "Roll Tester" suffix to recipe_engine trybots
Change requested in https://codereview.chromium.org/2956933002/

Bug: 644609
Change-Id: I662771ff35bd5cfb588a588336b2c02e7ad6286d
Reviewed-on: https://chromium-review.googlesource.com/548381
Reviewed-by: Robbie Iannucci <iannucci@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -334,21 +334,21 @@ buckets {
     }
 
     builders {
-      name: "depot_tools"
+      name: "depot_tools Roll Tester"
       recipe {
         properties: "downstream_project:depot_tools"
       }
     }
 
     builders {
-      name: "build"
+      name: "build Roll Tester"
       recipe {
         properties: "downstream_project:build"
       }
     }
 
     builders {
-      name: "infra"
+      name: "infra Roll Tester"
       recipe {
         properties: "downstream_project:infra"
       }
