Add infra-continuous-win10-64 to luci-scheduler-dev
Bug: 711076
Change-Id: Ia0ae98d7d113a79058eba8d7a1ab73099ae157a3
Reviewed-on: https://chromium-review.googlesource.com/550995
Reviewed-by: Ryan Tseng <hinoka@chromium.org>

--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -43,5 +43,11 @@ buckets {
       dimensions: "os:Windows-7-SP1"
       dimensions: "cpu:x86-64"
     }
+
+    builders {
+      name: "infra-continuous-win10-64"
+      dimensions: "os:Windows-10"
+      dimensions: "cpu:x86-64"
+    }
   }
 }
