--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -28,3 +28,15 @@ job {
     }
   }
 }
+
+job {
+  id: "infra-continuous-win10-64"
+  schedule: "with 1m interval"
+  task: {
+    buildbucket_task: {
+      server: "https://cr-buildbucket-dev.appspot.com"
+      bucket: "luci.infra.continuous"
+      builder: "infra-continuous-win10-64"
+    }
+  }
+}
