Add infra-continuous-win10-64 to luci-scheduler
Bug: 738255
Change-Id: I395dec1e351a3790208521bb00432ff447259173
Reviewed-on: https://chromium-review.googlesource.com/558213
Reviewed-by: Ryan Tseng <hinoka@chromium.org>
Commit-Queue: smut <smut@google.com>

--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -27,3 +27,15 @@ job {
     }
   }
 }
+
+job {
+  id: "infra-continuous-win10-64"
+  schedule: "with 10m interval"
+  task: {
+    buildbucket_task: {
+      server: "https://cr-buildbucket.appspot.com"
+      bucket: "luci.infra.continuous"
+      builder: "infra-continuous-win10-64"
+    }
+  }
+}
