--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -92,6 +92,12 @@ buckets {
       dimensions: "os:Windows-7-SP1"
       dimensions: "cpu:x86-64"
     }
+
+    builders {
+      name: "infra-continuous-win10-64"
+      dimensions: "os:Windows-10"
+      dimensions: "cpu:x86-64"
+    }
   }
 }
 
