Add skia and skiabuildbot downstream roll testers for recipe_engine
Bug: 644609
Change-Id: Ia55bdb1ba9aba0ccd822c83397c5ca8d068063fa
Reviewed-on: https://chromium-review.googlesource.com/563391
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -359,6 +359,20 @@ buckets {
         properties: "downstream_project:infra"
       }
     }
+
+    builders {
+      name: "skia Roll Tester"
+      recipe {
+        properties: "downstream_project:skia"
+      }
+    }
+
+    builders {
+      name: "skiabuildbot Roll Tester"
+      recipe {
+        properties: "downstream_project:skiabuildbot"
+      }
+    }
   }
 }
 
