Add downstream recipe trybots for depot_tools
Bug: 644609
Change-Id: Ibf225b0b97ac6bc756dd9912b15444359a732ca9
Reviewed-on: https://chromium-review.googlesource.com/565402
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -377,6 +377,69 @@ buckets {
 }
 
 buckets {
+  name: "luci.infra.depot_tools.try"
+  acl_sets: "public"
+  acl_sets: "tryserver"
+
+  swarming {
+    hostname: "chromium-swarm.appspot.com"
+    url_format: "https://luci-milo.appspot.com/swarming/task/{task_id}"
+
+    builder_defaults {
+      swarming_tags: "allow_milo:1"
+
+      dimensions: "pool:Infra"
+      dimensions: "os:Ubuntu-14.04"
+      dimensions: "cpu:x86-64"
+
+      recipe {
+        repository: "https://chromium.googlesource.com/infra/infra"
+        name: "recipe_roll_tryjob"
+        properties: "upstream_project:depot_tools"
+      }
+    }
+
+    builders {
+      category: "Depot Tools"
+      name: "Depot Tools Presubmit"
+      recipe {
+        repository: "https://chromium.googlesource.com/chromium/tools/build"
+        name: "run_presubmit"
+        properties: "repo_name:depot_tools"
+      }
+    }
+
+    builders {
+      name: "build Roll Tester"
+      recipe {
+        properties: "downstream_project:build"
+      }
+    }
+
+    builders {
+      name: "infra Roll Tester"
+      recipe {
+        properties: "downstream_project:infra"
+      }
+    }
+
+    builders {
+      name: "skia Roll Tester"
+      recipe {
+        properties: "downstream_project:skia"
+      }
+    }
+
+    builders {
+      name: "skiabuildbot Roll Tester"
+      recipe {
+        properties: "downstream_project:skiabuildbot"
+      }
+    }
+  }
+}
+
+buckets {
   name: "master.chromium.infra"
   acl_sets: "public"
   acls {
