cr-buildbucket: fix wrt to Infra pool not having Precise 32 bots.
It has Trusty 32 bots now.

R=nodir@chromium.org

Change-Id: I8109f47f70571d8f0973adca0173f9447a3e9c19
Reviewed-on: https://chromium-review.googlesource.com/567926
Reviewed-by: Nodir Turakulov <nodir@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -35,7 +35,7 @@ builder_mixins {
   dimensions: "cpu:x86-64"
   # Pool "Infra" contains bots of the following dimensions:
   #   os:Ubuntu-14.04,  cpu:x86-64
-  #   os:Ubuntu-12.04,  cpu:x86-32
+  #   os:Ubuntu-14.04,  cpu:x86-32
   #   os:Mac-10.9,      cpu:x86-64
   #   os:Windows-7-SP1, cpu:x86-64
   dimensions: "pool:Infra"
@@ -234,9 +234,9 @@ buckets {
 
     builders {
       category: "Infra"
-      name: "Infra Linux Precise 32 Tester"
+      name: "Infra Linux Trusty 32 Tester"
       dimensions: "cpu:x86-32"
-      dimensions: "os:Ubuntu-12.04"
+      dimensions: "os:Ubuntu-14.04"
       recipe {
         name: "infra_repo_trybot"
       }
