--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -49,5 +49,15 @@ buckets {
       dimensions: "os:Windows-10"
       dimensions: "cpu:x86-64"
     }
+
+    builders {
+      name: "goma-hello-world-trusty-64"
+      dimensions: "os:Ubuntu-14.04"
+      dimensions: "cpu:x86-64"
+      recipe {
+        name: "goma_hello_world"
+        repository: "https://chromium.googlesource.com/infra/infra"
+      }
+    }
   }
 }
