--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -4,7 +4,6 @@
 # For schema of this file and documentation see ProjectConfig message in
 # https://github.com/luci/luci-go/blob/master/scheduler/appengine/messages/cron.proto
 
-# Please keep jobs sorted by id.
 job {
   id: "infra-continuous-trusty-64"
   schedule: "with 1m interval"
@@ -37,6 +36,18 @@ job {
       server: "https://cr-buildbucket-dev.appspot.com"
       bucket: "luci.infra.continuous"
       builder: "infra-continuous-win10-64"
+    }
+  }
+}
+
+job {
+  id: "goma-hello-world-trusty-64"
+  schedule: "with 10m interval"
+  task: {
+    buildbucket_task: {
+      server: "https://cr-buildbucket-dev.appspot.com"
+      bucket: "luci.infra.continuous"
+      builder: "goma-hello-world-trusty-64"
     }
   }
 }
