--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -23,7 +23,7 @@ buckets {
 
     builder_defaults {
       swarming_tags: "allow_milo:1"
-      dimensions: "pool:default"
+      dimensions: "pool:Chrome"
       execution_timeout_secs: 1800  # 30 min
       build_numbers: true
       recipe {
