Add "fetch End-to-End Tester"
Bug: none
Change-Id: I72cf7bf0c8a19969b078096108d0301cbd0b3c07
Reviewed-on: https://chromium-review.googlesource.com/595989
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -392,6 +392,14 @@ buckets {
     }
 
     builders {
+      name: "fetch End-to-End Tester"
+      recipe {
+        repository: "https://chromium.googlesource.com/chromium/tools/depot_tools"
+        name: "fetch_end_to_end_test"
+      }
+    }
+
+    builders {
       name: "build Roll Tester"
       recipe {
         properties: "downstream_project:build"
