Add infra_gclient_with_go named cache to luci-go builder configs.
R=machenbach@chromium.org, phajdan@chromium.org

Change-Id: I4a8c304813be688a98fa03c22fe2ba2934d78584
Reviewed-on: https://chromium-review.googlesource.com/596047
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Commit-Queue: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -181,6 +181,10 @@ buckets {
         name: "luci_go"
         properties: "GOARCH:386"
       }
+      caches {
+        path: "infra_gclient_with_go"
+        name: "infra_gclient_with_go"
+      }
     }
 
     builders {
@@ -190,6 +194,10 @@ buckets {
       recipe {
         name: "luci_go"
       }
+      caches {
+        path: "infra_gclient_with_go"
+        name: "infra_gclient_with_go"
+      }
     }
 
     builders {
@@ -198,6 +206,10 @@ buckets {
       dimensions: "os:Mac-10.9"
       recipe {
         name: "luci_go"
+      }
+      caches {
+        path: "infra_gclient_with_go"
+        name: "infra_gclient_with_go"
       }
     }
 
@@ -209,6 +221,10 @@ buckets {
         name: "luci_go"
         properties_j: "presubmit:true"
       }
+      caches {
+        path: "infra_gclient_with_go"
+        name: "infra_gclient_with_go"
+      }
     }
 
     builders {
@@ -217,6 +233,10 @@ buckets {
       dimensions: "os:Windows-7-SP1"
       recipe {
         name: "luci_go"
+      }
+      caches {
+        path: "infra_gclient_with_go"
+        name: "infra_gclient_with_go"
       }
     }
 
