Add downstream recipe tester for build
Bug: 644609
Change-Id: Ic954806774c5fe29f0129e55a88ce86056721a78
Reviewed-on: https://chromium-review.googlesource.com/596028
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -450,6 +450,33 @@ buckets {
 }
 
 buckets {
+  name: "luci.infra.build.try"
+  acl_sets: "public"
+  acl_sets: "tryserver"
+
+  swarming {
+    hostname: "chromium-swarm.appspot.com"
+    url_format: "https://luci-milo.appspot.com/swarming/task/{task_id}"
+
+    builder_defaults {
+      mixins: "default"
+      dimensions: "os:Ubuntu-14.04"
+      recipe {
+        name: "recipe_roll_tryjob"
+        properties: "upstream_project:build"
+      }
+    }
+
+    builders {
+      name: "infra Roll Tester"
+      recipe {
+        properties: "downstream_project:infra"
+      }
+    }
+  }
+}
+
+buckets {
   name: "master.chromium.infra"
   acl_sets: "public"
   acls {
