Temporarily increase execution timeout for "fetch End-to-End Tester"
This will make it possible to run to completion and figure out
the right timeout to use.

Bug: none
Change-Id: Ic7e7198a779fd2a573805b9496550a5f1a340b1e
Reviewed-on: https://chromium-review.googlesource.com/598233
Reviewed-by: Dirk Pranke <dpranke@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -417,6 +417,7 @@ buckets {
         repository: "https://chromium.googlesource.com/chromium/tools/depot_tools"
         name: "fetch_end_to_end_test"
       }
+      execution_timeout_secs: 21600  # 6 hours
     }
 
     builders {
