--- a/codereview.settings
+++ b/codereview.settings
@@ -1,6 +1,2 @@
-# This file is used by gcl to get repository specific information.
-CODE_REVIEW_SERVER: https://codereview.chromium.org
-GERRIT_SQUASH_UPLOADS: true
-VIEW_VC: https://chromium.googlesource.com/infra/infra/+/
-CC_LIST: chromium-reviews@chromium.org, infra-reviews+infra@chromium.org
-PROJECT: infra
+# This file is used by git cl to get repository specific information.
+GERRIT_HOST: True
