Add ACLs to infra's luci-scheduler-dev.cfg.
TBR=vadimsh@chromium.org

Bug: 736770
Change-Id: Ib2a3c225dccda4385e3a2535be90d5051e2aa1d4
Reviewed-on: https://chromium-review.googlesource.com/607011
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -4,8 +4,23 @@
 # For schema of this file and documentation see ProjectConfig message in
 # https://github.com/luci/luci-go/blob/master/scheduler/appengine/messages/cron.proto
 
+acl_sets {
+  name: "default"
+  acls {
+    role: READER
+    granted_to: "group:all"
+  }
+  acls {
+    role: OWNER
+    # https://chrome-infra-auth-dev.appspot.com/auth/groups/project-infra-troopers
+    granted_to: "group:project-infra-troopers"
+  }
+}
+
+
 job {
   id: "infra-continuous-trusty-64"
+  acl_sets: "default"
   schedule: "with 1m interval"
   task: {
     buildbucket_task: {
@@ -18,6 +33,7 @@ job {
 
 job {
   id: "infra-continuous-win-64"
+  acl_sets: "default"
   schedule: "with 1m interval"
   task: {
     buildbucket_task: {
@@ -30,6 +46,7 @@ job {
 
 job {
   id: "infra-continuous-win10-64"
+  acl_sets: "default"
   schedule: "with 1m interval"
   task: {
     buildbucket_task: {
@@ -42,6 +59,7 @@ job {
 
 job {
   id: "goma-hello-world-trusty-64"
+  acl_sets: "default"
   schedule: "with 10m interval"
   task: {
     buildbucket_task: {
