Upgrade from task wrapper in luci-scheduler config.
R=vadimsh@chromium.org

Change-Id: Icf21157ef08be72c80576bd9bc7752c4a2b99734
Reviewed-on: https://chromium-review.googlesource.com/609060
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -22,12 +22,10 @@ job {
   id: "infra-continuous-trusty-64"
   acl_sets: "default"
   schedule: "with 1m interval"
-  task: {
-    buildbucket_task: {
-      server: "https://cr-buildbucket-dev.appspot.com"
-      bucket: "luci.infra.continuous"
-      builder: "infra-continuous-trusty-64"
-    }
+  buildbucket: {
+    server: "https://cr-buildbucket-dev.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "infra-continuous-trusty-64"
   }
 }
 
@@ -35,12 +33,10 @@ job {
   id: "infra-continuous-win-64"
   acl_sets: "default"
   schedule: "with 1m interval"
-  task: {
-    buildbucket_task: {
-      server: "https://cr-buildbucket-dev.appspot.com"
-      bucket: "luci.infra.continuous"
-      builder: "infra-continuous-win-64"
-    }
+  buildbucket: {
+    server: "https://cr-buildbucket-dev.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "infra-continuous-win-64"
   }
 }
 
@@ -48,12 +44,10 @@ job {
   id: "infra-continuous-win10-64"
   acl_sets: "default"
   schedule: "with 1m interval"
-  task: {
-    buildbucket_task: {
-      server: "https://cr-buildbucket-dev.appspot.com"
-      bucket: "luci.infra.continuous"
-      builder: "infra-continuous-win10-64"
-    }
+  buildbucket: {
+    server: "https://cr-buildbucket-dev.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "infra-continuous-win10-64"
   }
 }
 
@@ -61,11 +55,9 @@ job {
   id: "goma-hello-world-trusty-64"
   acl_sets: "default"
   schedule: "with 10m interval"
-  task: {
-    buildbucket_task: {
-      server: "https://cr-buildbucket-dev.appspot.com"
-      bucket: "luci.infra.continuous"
-      builder: "goma-hello-world-trusty-64"
-    }
+  buildbucket: {
+    server: "https://cr-buildbucket-dev.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "goma-hello-world-trusty-64"
   }
 }
