--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -7,35 +7,29 @@
 job {
   id: "infra-continuous-trusty-64"
   schedule: "with 10m interval"
-  task: {
-    buildbucket_task: {
-      server: "https://cr-buildbucket.appspot.com"
-      bucket: "luci.infra.continuous"
-      builder: "infra-continuous-trusty-64"
-    }
+  buildbucket: {
+    server: "https://cr-buildbucket.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "infra-continuous-trusty-64"
   }
 }
 
 job {
   id: "infra-continuous-win-64"
   schedule: "with 10m interval"
-  task: {
-    buildbucket_task: {
-      server: "https://cr-buildbucket.appspot.com"
-      bucket: "luci.infra.continuous"
-      builder: "infra-continuous-win-64"
-    }
+  buildbucket: {
+    server: "https://cr-buildbucket.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "infra-continuous-win-64"
   }
 }
 
 job {
   id: "infra-continuous-win10-64"
   schedule: "with 10m interval"
-  task: {
-    buildbucket_task: {
-      server: "https://cr-buildbucket.appspot.com"
-      bucket: "luci.infra.continuous"
-      builder: "infra-continuous-win10-64"
-    }
+  buildbucket: {
+    server: "https://cr-buildbucket.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "infra-continuous-win10-64"
   }
 }
