--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -3,9 +3,23 @@
 # For schema of this file and documentation see ProjectConfig message in
 # https://github.com/luci/luci-go/blob/master/scheduler/appengine/messages/cron.proto
 
+
+acl_sets {
+  name: "default"
+  acls {
+    role: READER
+    granted_to: "group:all"
+  }
+  acls {
+    role: OWNER
+    granted_to: "group:project-infra-committers"
+  }
+}
+
 # Please keep jobs sorted by id.
 job {
   id: "infra-continuous-trusty-64"
+  acl_sets: "default"
   schedule: "with 10m interval"
   buildbucket: {
     server: "https://cr-buildbucket.appspot.com"
@@ -16,6 +30,7 @@ job {
 
 job {
   id: "infra-continuous-win-64"
+  acl_sets: "default"
   schedule: "with 10m interval"
   buildbucket: {
     server: "https://cr-buildbucket.appspot.com"
@@ -26,6 +41,7 @@ job {
 
 job {
   id: "infra-continuous-win10-64"
+  acl_sets: "default"
   schedule: "with 10m interval"
   buildbucket: {
     server: "https://cr-buildbucket.appspot.com"
