Add 'service_account' field to buildbucket-dev bucket to test the feature.
It should start failing initially since luci-scheduler-dev has no permission
to use this account. I want to observe how exactly this looks.

TBR=nodir@chromium.org
BUG=731849

Change-Id: I4e356e3d277e80f7f7594866ee7ceefb46d963fb
Reviewed-on: https://chromium-review.googlesource.com/646713
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>

--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -27,6 +27,7 @@ buckets {
         name: "infra_continuous_luci"
         repository: "https://chromium.googlesource.com/infra/infra"
       }
+      service_account: "adhoc-testing@luci-token-server-dev.iam.gserviceaccount.com"
     }
 
     builders {
