[scheduler] Add gitiles-based trigger of continious trusty-64 builder.
TBR=vadimsh@chromium.org

Bug: 646067
Change-Id: I6cd71daaeeba3458183f5a31a345f6f7dff6b568
Reviewed-on: https://chromium-review.googlesource.com/661944
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -17,6 +17,17 @@ acl_sets {
   }
 }
 
+trigger {
+  id: "infra-gitiles-trigger"
+  acl_sets: "default"
+
+  gitiles: {
+    repo: "https://chromium.googlesource.com/infra/infra.git"
+    refs: "refs/heads/master"
+  }
+  triggers: "infra-continuous-trusty-64"
+  # TODO(tandrii): trigger other infra-continuous jobs, too.
+}
 
 job {
   id: "infra-continuous-trusty-64"
