luic-scheduler-dev: change all infra builders to gitiles-triggered.
TBR=vadimsh@chromium.org

Bug: 646067
Change-Id: If05b87513dd8679879ea1e48463ed5bd3c203f32
Reviewed-on: https://chromium-review.googlesource.com/664599
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -26,13 +26,14 @@ trigger {
     refs: "refs/heads/master"
   }
   triggers: "infra-continuous-trusty-64"
-  # TODO(tandrii): trigger other infra-continuous jobs, too.
+  triggers: "infra-continuous-win-64"
+  triggers: "infra-continuous-win10-64"
 }
 
 job {
   id: "infra-continuous-trusty-64"
   acl_sets: "default"
-  schedule: "with 1m interval"
+  schedule: "triggered"
   buildbucket: {
     server: "https://cr-buildbucket-dev.appspot.com"
     bucket: "luci.infra.continuous"
@@ -43,7 +44,7 @@ job {
 job {
   id: "infra-continuous-win-64"
   acl_sets: "default"
-  schedule: "with 1m interval"
+  schedule: "triggered"
   buildbucket: {
     server: "https://cr-buildbucket-dev.appspot.com"
     bucket: "luci.infra.continuous"
@@ -54,7 +55,7 @@ job {
 job {
   id: "infra-continuous-win10-64"
   acl_sets: "default"
-  schedule: "with 1m interval"
+  schedule: "triggered"
   buildbucket: {
     server: "https://cr-buildbucket-dev.appspot.com"
     bucket: "luci.infra.continuous"
