scheduler-dev: experiment with 6 triggered builders.
TBR=vadimsh@chromium.org

Bug: 646067
Change-Id: Ibcaf76cfa9438bdb43e263b1b20ca4738f6390e8
Reviewed-on: https://chromium-review.googlesource.com/670987
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -26,8 +26,11 @@ trigger {
     refs: "refs/heads/master"
   }
   triggers: "infra-continuous-trusty-64"
+  triggers: "infra-continuous-trusty-64-dup"
   triggers: "infra-continuous-win-64"
+  triggers: "infra-continuous-win-64-dup"
   triggers: "infra-continuous-win10-64"
+  triggers: "infra-continuous-win10-64-dup"
 }
 
 job {
@@ -62,6 +65,41 @@ job {
     builder: "infra-continuous-win10-64"
   }
 }
+
+### TODO(Tandrii): remove these 3 dup builders.
+job {
+  id: "infra-continuous-trusty-64-dup"
+  acl_sets: "default"
+  schedule: "triggered"
+  buildbucket: {
+    server: "https://cr-buildbucket-dev.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "infra-continuous-trusty-64"
+  }
+}
+
+job {
+  id: "infra-continuous-win-64-dup"
+  acl_sets: "default"
+  schedule: "triggered"
+  buildbucket: {
+    server: "https://cr-buildbucket-dev.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "infra-continuous-win-64"
+  }
+}
+
+job {
+  id: "infra-continuous-win10-64-dup"
+  acl_sets: "default"
+  schedule: "triggered"
+  buildbucket: {
+    server: "https://cr-buildbucket-dev.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "infra-continuous-win10-64"
+  }
+}
+### END of TODO(Tandrii): remove these 3 dup builders.
 
 job {
   id: "goma-hello-world-trusty-64"
