Add production infra jobs scheduling based on new commits.
TBR=vadimsh@chromium.org

Bug: 766740
Change-Id: I7d0f3cbeab071420ae574ef522e309ed8677db31
Reviewed-on: https://chromium-review.googlesource.com/673369
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>
Commit-Queue: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -16,7 +16,24 @@ acl_sets {
   }
 }
 
-# Please keep jobs sorted by id.
+# Triggers first.
+
+trigger {
+  id: "infra-gitiles-trigger"
+  acl_sets: "default"
+
+  gitiles: {
+    repo: "https://chromium.googlesource.com/infra/infra.git"
+    refs: "refs/heads/master"
+  }
+  triggers: "infra-continuous-trusty-64"
+  triggers: "infra-continuous-win-64"
+  triggers: "infra-continuous-win10-64"
+}
+
+
+# Jobs second. Please keep jobs sorted by id.
+
 job {
   id: "infra-continuous-trusty-64"
   acl_sets: "default"
