scheduler: test refs with globs.
TBR=vadimsh@chromium.org

Change-Id: I450a5ed116795d9eedfa8dbf4b34901514e00532
Reviewed-on: https://chromium-review.googlesource.com/711383
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -23,7 +23,9 @@ trigger {
 
   gitiles: {
     repo: "https://chromium.googlesource.com/infra/infra.git"
-    refs: "refs/heads/master"
+    # TODO(tandrii): revert back to just master after crbug/772608 test is
+    # complete.
+    refs: "refs/heads/*"
   }
   triggers: "infra-continuous-trusty-64"
   triggers: "infra-continuous-win-64"
