Revert "scheduler: test refs with globs."
This reverts commit 7d57111533bafa8d93680b5c78fd0463361411e3.

Reason for revert: no longer needed.

Original change's description:
> scheduler: test refs with globs.
> 
> TBR=vadimsh@chromium.org
> 
> Change-Id: I450a5ed116795d9eedfa8dbf4b34901514e00532
> Reviewed-on: https://chromium-review.googlesource.com/711383
> Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

TBR=vadimsh@chromium.org,tandrii@chromium.org

Change-Id: I2a81f97f1da7c39290fc0cfc42ddb5877dd55f5a
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Reviewed-on: https://chromium-review.googlesource.com/711320
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -23,9 +23,7 @@ trigger {
 
   gitiles: {
     repo: "https://chromium.googlesource.com/infra/infra.git"
-    # TODO(tandrii): revert back to just master after crbug/772608 test is
-    # complete.
-    refs: "refs/heads/*"
+    refs: "refs/heads/master"
   }
   triggers: "infra-continuous-trusty-64"
   triggers: "infra-continuous-win-64"
