scheduler: test refs/globs/* in production.
TBR=vadimsh@chromium.org

No-Try: True
Change-Id: I870e23ac8facf41ede9304e49f14cda1cbd36adb
Reviewed-on: https://chromium-review.googlesource.com/714650
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>
Commit-Queue: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -24,7 +24,8 @@ trigger {
 
   gitiles: {
     repo: "https://chromium.googlesource.com/infra/infra.git"
-    refs: "refs/heads/master"
+    # TODO(tandrii): revert this test.
+    refs: "refs/heads/*"
   }
   triggers: "infra-continuous-trusty-64"
   triggers: "infra-continuous-win-64"
