Migrate swarmbucket builders to two new pools.
luci.infra.try for tryjobs.
luci.infra.ci for CI jobs.

R=nodir@chromium.org

Bug: 767736
Change-Id: I533b36c3e7a25b5783721ea5475dc967db5f5916
Reviewed-on: https://chromium-review.googlesource.com/716674
Reviewed-by: Nodir Turakulov <nodir@chromium.org>

--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -39,8 +39,8 @@ job {
   acl_sets: "default"
   schedule: "with 10m interval"
   buildbucket: {
-    server: "https://cr-buildbucket.appspot.com"
-    bucket: "luci.infra.continuous"
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
     builder: "infra-continuous-trusty-64"
   }
 }
@@ -50,8 +50,8 @@ job {
   acl_sets: "default"
   schedule: "with 10m interval"
   buildbucket: {
-    server: "https://cr-buildbucket.appspot.com"
-    bucket: "luci.infra.continuous"
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
     builder: "infra-continuous-win-64"
   }
 }
@@ -61,8 +61,8 @@ job {
   acl_sets: "default"
   schedule: "with 10m interval"
   buildbucket: {
-    server: "https://cr-buildbucket.appspot.com"
-    bucket: "luci.infra.continuous"
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
     builder: "infra-continuous-win10-64"
   }
 }
