--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -15,7 +15,7 @@ acl_sets {
 }
 
 acl_sets {
-  name: "tryserver"
+  name: "try"
   acls {
     role: SCHEDULER
     # This whitelists largest number of people who are trusted to schedule
@@ -33,12 +33,6 @@ builder_mixins {
   swarming_tags: "allow_milo:1"
 
   dimensions: "cpu:x86-64"
-  # Pool "Infra" contains bots of the following dimensions:
-  #   os:Ubuntu-14.04,  cpu:x86-64
-  #   os:Ubuntu-14.04,  cpu:x86-32
-  #   os:Mac-10.9,      cpu:x86-64
-  #   os:Windows-7-SP1, cpu:x86-64
-  dimensions: "pool:Infra"
 
   execution_timeout_secs: 1800  # 30 min
 
@@ -48,7 +42,7 @@ builder_mixins {
 }
 
 buckets {
-  name: "luci.infra.continuous"
+  name: "luci.infra.ci"
   acl_sets: "public"
   acls {
     role: SCHEDULER
@@ -57,10 +51,11 @@ buckets {
 
   swarming {
     hostname: "chromium-swarm.appspot.com"
-    url_format: "https://luci-milo.appspot.com/swarming/task/{task_id}"
 
     builder_defaults {
       mixins: "default"
+      # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.ci
+      dimensions: "pool:luci.infra.ci"
       build_numbers: true
       recipe {
         name: "infra_continuous_luci"
@@ -90,7 +85,7 @@ buckets {
 buckets {
   name: "luci.infra.try"
   acl_sets: "public"
-  acl_sets: "tryserver"
+  acl_sets: "try"
 
   swarming {
     hostname: "chromium-swarm.appspot.com"
@@ -99,6 +94,8 @@ buckets {
 
     builder_defaults {
       mixins: "default"
+      # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.try
+      dimensions: "pool:luci.infra.try"
     }
 
 
@@ -298,17 +295,19 @@ buckets {
   }
 }
 
+# TODO(tandrii): move these builders to bucket luci.infra.try.
 buckets {
   name: "luci.infra.recipe_engine.try"
   acl_sets: "public"
-  acl_sets: "tryserver"
+  acl_sets: "try"
 
   swarming {
     hostname: "chromium-swarm.appspot.com"
-    url_format: "https://luci-milo.appspot.com/swarming/task/{task_id}"
 
     builder_defaults {
       mixins: "default"
+      # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.try
+      dimensions: "pool:luci.infra.try"
       dimensions: "os:Ubuntu-14.04"
       recipe {
         name: "recipe_roll_tryjob"
@@ -353,17 +352,19 @@ buckets {
   }
 }
 
+# TODO(tandrii): move these builders to bucket luci.infra.try.
 buckets {
   name: "luci.infra.depot_tools.try"
   acl_sets: "public"
-  acl_sets: "tryserver"
+  acl_sets: "try"
 
   swarming {
     hostname: "chromium-swarm.appspot.com"
-    url_format: "https://luci-milo.appspot.com/swarming/task/{task_id}"
 
     builder_defaults {
       mixins: "default"
+      # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.try
+      dimensions: "pool:luci.infra.try"
       dimensions: "os:Ubuntu-14.04"
       recipe {
         name: "recipe_roll_tryjob"
@@ -420,17 +421,19 @@ buckets {
   }
 }
 
+# TODO(tandrii): move these builders to bucket luci.infra.try.
 buckets {
   name: "luci.infra.build.try"
   acl_sets: "public"
-  acl_sets: "tryserver"
+  acl_sets: "try"
 
   swarming {
     hostname: "chromium-swarm.appspot.com"
-    url_format: "https://luci-milo.appspot.com/swarming/task/{task_id}"
 
     builder_defaults {
       mixins: "default"
+      # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.try
+      dimensions: "pool:luci.infra.try"
       dimensions: "os:Ubuntu-14.04"
       recipe {
         name: "recipe_roll_tryjob"
@@ -472,7 +475,7 @@ buckets {
 buckets {
   name: "master.tryserver.client.mojo"
   acl_sets: "public"
-  acl_sets: "tryserver"
+  acl_sets: "try"
   acls {
     role: WRITER
     group: "service-account-mojo-master"
