Setup a triggered job that runs 'gerrit_hello_world' recipe.
The git auth is currently not enabled. It means the recipe will pick up whatever
credentials are predeployed on the bot (likely 'chrome-bot@' or ccompute one).

Next steps are:
1. Enable auth, but don't specify service account => should fail to push.
2. Specify the service account => should push as this account.

R=tandrii@chromium.org
BUG=756224

Change-Id: I1d34870b4de9c5940846d0eec263713aa2163bda
Reviewed-on: https://chromium-review.googlesource.com/719383
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -35,7 +35,7 @@ job {
   acl_sets: "default"
   schedule: "triggered"
   buildbucket: {
-    server: "https://cr-buildbucket-dev.appspot.com"
+    server: "cr-buildbucket-dev.appspot.com"
     bucket: "luci.infra.continuous"
     builder: "infra-continuous-trusty-64"
   }
@@ -46,7 +46,7 @@ job {
   acl_sets: "default"
   schedule: "triggered"
   buildbucket: {
-    server: "https://cr-buildbucket-dev.appspot.com"
+    server: "cr-buildbucket-dev.appspot.com"
     bucket: "luci.infra.continuous"
     builder: "infra-continuous-win-64"
   }
@@ -57,7 +57,7 @@ job {
   acl_sets: "default"
   schedule: "triggered"
   buildbucket: {
-    server: "https://cr-buildbucket-dev.appspot.com"
+    server: "cr-buildbucket-dev.appspot.com"
     bucket: "luci.infra.continuous"
     builder: "infra-continuous-win10-64"
   }
@@ -68,8 +68,20 @@ job {
   acl_sets: "default"
   schedule: "with 10m interval"
   buildbucket: {
-    server: "https://cr-buildbucket-dev.appspot.com"
+    server: "cr-buildbucket-dev.appspot.com"
     bucket: "luci.infra.continuous"
     builder: "goma-hello-world-trusty-64"
+  }
+}
+
+
+job {
+  id: "gerrit-hello-world-trusty-64"
+  acl_sets: "default"
+  schedule: "triggered"
+  buildbucket: {
+    server: "cr-buildbucket-dev.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "gerrit-hello-world-trusty-64"
   }
 }
