--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -27,7 +27,6 @@ buckets {
         name: "infra_continuous_luci"
         repository: "https://chromium.googlesource.com/infra/infra"
       }
-      service_account: "adhoc-testing@luci-token-server-dev.iam.gserviceaccount.com"
     }
 
     builders {
@@ -54,6 +53,16 @@ buckets {
       dimensions: "cpu:x86-64"
       recipe {
         name: "goma_hello_world"
+        repository: "https://chromium.googlesource.com/infra/infra"
+      }
+    }
+
+    builders {
+      name: "gerrit-hello-world-trusty-64"
+      dimensions: "os:Ubuntu-14.04"
+      dimensions: "cpu:x86-64"
+      recipe {
+        name: "gerrit_hello_world"
         repository: "https://chromium.googlesource.com/infra/infra"
       }
     }
