Rename staging to use luci.infra.ci pool & bucket.
R=vadimsh@chromium.org
Bug: 767736
Change-Id: I93dd4f58668a12b9b0b98f1ec454603e9c7574bf
Reviewed-on: https://chromium-review.googlesource.com/719717
Reviewed-by: Nodir Turakulov <nodir@chromium.org>

--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -7,7 +7,7 @@
 # schema of this file and documentation.
 
 buckets {
-  name: "luci.infra.continuous"
+  name: "luci.infra.ci"
   acls {
     role: READER
     group: "all"
@@ -20,7 +20,7 @@ buckets {
   swarming {
     builder_defaults {
       swarming_tags: "allow_milo:1"
-      dimensions: "pool:Chrome"
+      dimensions: "pool:Chrome"  # No point in creating a dedicated pool on -dev.
       execution_timeout_secs: 1800  # 30 min
       build_numbers: true
       recipe {
