--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -36,7 +36,7 @@ job {
   schedule: "triggered"
   buildbucket: {
     server: "cr-buildbucket-dev.appspot.com"
-    bucket: "luci.infra.continuous"
+    bucket: "luci.infra.ci"
     builder: "infra-continuous-trusty-64"
   }
 }
@@ -47,7 +47,7 @@ job {
   schedule: "triggered"
   buildbucket: {
     server: "cr-buildbucket-dev.appspot.com"
-    bucket: "luci.infra.continuous"
+    bucket: "luci.infra.ci"
     builder: "infra-continuous-win-64"
   }
 }
@@ -58,7 +58,7 @@ job {
   schedule: "triggered"
   buildbucket: {
     server: "cr-buildbucket-dev.appspot.com"
-    bucket: "luci.infra.continuous"
+    bucket: "luci.infra.ci"
     builder: "infra-continuous-win10-64"
   }
 }
@@ -69,7 +69,7 @@ job {
   schedule: "with 10m interval"
   buildbucket: {
     server: "cr-buildbucket-dev.appspot.com"
-    bucket: "luci.infra.continuous"
+    bucket: "luci.infra.ci"
     builder: "goma-hello-world-trusty-64"
   }
 }
@@ -81,7 +81,7 @@ job {
   schedule: "triggered"
   buildbucket: {
     server: "cr-buildbucket-dev.appspot.com"
-    bucket: "luci.infra.continuous"
+    bucket: "luci.infra.ci"
     builder: "gerrit-hello-world-trusty-64"
   }
 }
