Enable git authentication for gerrit_hello_world job.
Git push should start failing with "need to login" error, since the job runs
without the service account specified yet (this will be the next verification
step).

It should start using system account (pool-chrome@... in this case) when
fetching the recipes.

TBR=tandrii@chromium.org
BUG=756224

Change-Id: I138e24ed83ec50ae39039b5087486f5006e18bcd
Reviewed-on: https://chromium-review.googlesource.com/719727
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>

--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -64,6 +64,7 @@ buckets {
       recipe {
         name: "gerrit_hello_world"
         repository: "https://chromium.googlesource.com/infra/infra"
+        properties_j: "$kitchen:{\"git_auth\": true}"
       }
     }
   }
