--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -66,6 +66,7 @@ buckets {
         repository: "https://chromium.googlesource.com/infra/infra"
         properties_j: "$kitchen:{\"git_auth\": true}"
       }
+      service_account: "adhoc-testing@luci-token-server-dev.iam.gserviceaccount.com"
     }
   }
 }
