Enable git auth on all staging luci.infra.continuous builders.
Mostly to confirm it is works on Windows.

TBR=tandrii@chromium.org
BUG=756224

Change-Id: Iec739d449d6b47b6a6eeb53cc72d57996608f09a
Reviewed-on: https://chromium-review.googlesource.com/719884
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>

--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -26,7 +26,9 @@ buckets {
       recipe {
         name: "infra_continuous_luci"
         repository: "https://chromium.googlesource.com/infra/infra"
+        properties_j: "$kitchen:{\"git_auth\": true}"
       }
+      service_account: "adhoc-testing@luci-token-server-dev.iam.gserviceaccount.com"
     }
 
     builders {
@@ -54,6 +56,7 @@ buckets {
       recipe {
         name: "goma_hello_world"
         repository: "https://chromium.googlesource.com/infra/infra"
+        properties_j: "$kitchen:{\"git_auth\": true}"
       }
     }
 
@@ -66,7 +69,6 @@ buckets {
         repository: "https://chromium.googlesource.com/infra/infra"
         properties_j: "$kitchen:{\"git_auth\": true}"
       }
-      service_account: "adhoc-testing@luci-token-server-dev.iam.gserviceaccount.com"
     }
   }
 }
