Create CI for infra/infra.git (this) repo mirroring buildbot.
Notes:
 * Recipe isn't exactly same as what runs on buildbot. This will be
   fixed later.
 * Win10 was defined before, but disabled now because there is no win10
   hardware in CI pool *yet*.
 * win7 bots named infra-continious-win7-{32,64} for consistency,
   but buildbot waterfall had just s/win7/win in builder name.
 * trusty-64 perf builder from master isn't copied. It has side effects
   and isn't actually useful (also, I am its owner).

Bug: 767690
Change-Id: I4508bfb9bf98cbfea612ea5d1abb874b2e350f8f
Reviewed-on: https://chromium-review.googlesource.com/720239
Reviewed-by: Nodir Turakulov <nodir@chromium.org>
Reviewed-by: Ryan Tseng <hinoka@chromium.org>

--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -1,7 +1,8 @@
 # Defines jobs on luci-scheduler.appspot.com.
 #
 # For schema of this file and documentation see ProjectConfig message in
-# https://github.com/luci/luci-go/blob/master/scheduler/appengine/messages/cron.proto
+#
+# https://chromium.googlesource.com/infra/luci/luci-go/+/master/scheduler/appengine/messages/cron.proto
 
 
 acl_sets {
@@ -16,7 +17,8 @@ acl_sets {
   }
 }
 
-# Triggers first.
+
+# Infra repository CI.
 
 trigger {
   id: "infra-gitiles-trigger"
@@ -27,39 +29,169 @@ trigger {
     refs: "refs/heads/master"
   }
   triggers: "infra-continuous-trusty-64"
-  triggers: "infra-continuous-win-64"
-  triggers: "infra-continuous-win10-64"
+  triggers: "infra-continuous-zesty-64"
+  triggers: "infra-continuous-yakkety-64"
+  triggers: "infra-continuous-xenial-64"
+  triggers: "infra-continuous-trusty-64"
+  triggers: "infra-continuous-trusty-32"
+  triggers: "infra-continuous-precise-64"
+  triggers: "infra-continuous-precise-32"
+  triggers: "infra-continuous-mac-10.13-64"
+  triggers: "infra-continuous-mac-10.12-64"
+  triggers: "infra-continuous-mac-10.11-64"
+  triggers: "infra-continuous-mac-10.10-64"
+  triggers: "infra-continuous-mac-10.9-64"
+  triggers: "infra-continuous-win7-64"
+  triggers: "infra-continuous-win7-32"
+  # TODO(tandrii): enable this builder.
+  # triggers: "infra-continuous-win10-64"
 }
 
-
-# Jobs second. Please keep jobs sorted by id.
-
+# Variety of Ubuntu builders.
 job {
   id: "infra-continuous-trusty-64"
   acl_sets: "default"
-  schedule: "with 10m interval"
   buildbucket: {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.infra.ci"
     builder: "infra-continuous-trusty-64"
   }
 }
-
 job {
-  id: "infra-continuous-win-64"
+  id: "infra-continuous-zesty-64"
   acl_sets: "default"
-  schedule: "with 10m interval"
   buildbucket: {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.infra.ci"
-    builder: "infra-continuous-win-64"
+    builder: "infra-continuous-zesty-64"
+  }
+}
+job {
+  id: "infra-continuous-yakkety-64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-yakkety-64"
+  }
+}
+job {
+  id: "infra-continuous-xenial-64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-xenial-64"
+  }
+}
+job {
+  id: "infra-continuous-trusty-64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-trusty-64"
+  }
+}
+job {
+  id: "infra-continuous-trusty-32"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-trusty-32"
+  }
+}
+job {
+  id: "infra-continuous-precise-64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-precise-64"
+  }
+}
+job {
+  id: "infra-continuous-precise-32"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-precise-32"
   }
 }
 
+# Variety of Mac builders.
+job {
+  id: "infra-continuous-mac-10.13-64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-mac-10.13-64"
+  }
+}
+job {
+  id: "infra-continuous-mac-10.12-64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-mac-10.12-64"
+  }
+}
+job {
+  id: "infra-continuous-mac-10.11-64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-mac-10.11-64"
+  }
+}
+job {
+  id: "infra-continuous-mac-10.10-64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-mac-10.10-64"
+  }
+}
+job {
+  id: "infra-continuous-mac-10.9-64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-mac-10.9-64"
+  }
+}
+
+# A few windows builders.
+job {
+  id: "infra-continuous-win7-64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-win7-64"
+  }
+}
+job {
+  id: "infra-continuous-win7-32"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "infra-continuous-win7-32"
+  }
+}
 job {
   id: "infra-continuous-win10-64"
+  # TODO(tAndrii): re-enable this builder.
+  disabled: true
   acl_sets: "default"
-  schedule: "with 10m interval"
   buildbucket: {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.infra.ci"
