--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -41,6 +41,41 @@ builder_mixins {
   }
 }
 
+builder_mixins {
+  name: "infra gclient checkout with Go env"
+  caches {
+    path: "infra_gclient_with_go"
+    name: "infra_gclient_with_go"
+  }
+}
+
+builder_mixins {
+  name: "infra ci"
+  mixins: "infra gclient checkout with Go env"
+  recipe {
+    # TODO(tandrii): change to infra_continuous after either removing uploading
+    # of artifacts and/or propertly authenticating.
+    name: "infra_continuous_luci"
+  }
+}
+
+builder_mixins {
+  name: "luci-go ci"
+  mixins: "infra gclient checkout with Go env"
+  recipe {
+    name: "luci_go"
+  }
+}
+
+builder_mixins {
+  name: "luci-gae ci"
+  mixins: "infra gclient checkout with Go env"
+  recipe {
+    name: "luci_gae"
+  }
+}
+
+
 buckets {
   name: "luci.infra.ci"
   acl_sets: "public"
@@ -57,28 +92,111 @@ buckets {
       # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.ci
       dimensions: "pool:luci.infra.ci"
       build_numbers: true
-      recipe {
-        name: "infra_continuous_luci"
-      }
     }
 
+    ###########################################################################
+    ### infra/infra.git builders
+
+    ###### Variety of Ubuntu versions.
+    builders {
+      name: "infra-continuous-zesty-64"
+      mixins: "infra ci"
+      dimensions: "os:Ubuntu-17.04"
+      dimensions: "cpu:x86-64"
+    }
+    builders {
+      name: "infra-continuous-yakkety-64"
+      mixins: "infra ci"
+      dimensions: "os:Ubuntu-16.10"
+      dimensions: "cpu:x86-64"
+    }
+    builders {
+      name: "infra-continuous-xenial-64"
+      mixins: "infra ci"
+      dimensions: "os:Ubuntu-16.04"
+      dimensions: "cpu:x86-64"
+    }
     builders {
       name: "infra-continuous-trusty-64"
+      mixins: "infra ci"
       dimensions: "os:Ubuntu-14.04"
       dimensions: "cpu:x86-64"
     }
-
     builders {
-      name: "infra-continuous-win-64"
+      name: "infra-continuous-trusty-32"
+      mixins: "infra ci"
+      dimensions: "os:Ubuntu-14.04"
+      dimensions: "cpu:x86-32"
+    }
+    builders {
+      name: "infra-continuous-precise-64"
+      mixins: "infra ci"
+      dimensions: "os:Ubuntu-12.04"
+      dimensions: "cpu:x86-64"
+    }
+    builders {
+      name: "infra-continuous-precise-32"
+      mixins: "infra ci"
+      dimensions: "os:Ubuntu-12.04"
+      dimensions: "cpu:x86-32"
+    }
+
+    ###### Variety of Mac versions.
+    builders {
+      name: "infra-continuous-mac-10.13-64"
+      mixins: "infra ci"
+      dimensions: "os:Mac-10.13"
+      dimensions: "cpu:x86-64"
+    }
+    builders {
+      name: "infra-continuous-mac-10.12-64"
+      mixins: "infra ci"
+      dimensions: "os:Mac-10.12"
+      dimensions: "cpu:x86-64"
+    }
+    builders {
+      name: "infra-continuous-mac-10.11-64"
+      mixins: "infra ci"
+      dimensions: "os:Mac-10.11"
+      dimensions: "cpu:x86-64"
+    }
+    builders {
+      name: "infra-continuous-mac-10.10-64"
+      mixins: "infra ci"
+      dimensions: "os:Mac-10.10"
+      dimensions: "cpu:x86-64"
+    }
+    builders {
+      name: "infra-continuous-mac-10.9-64"
+      mixins: "infra ci"
+      dimensions: "os:Mac-10.9"
+      dimensions: "cpu:x86-64"
+    }
+
+    ###### Some Win versions.
+    builders {
+      name: "infra-continuous-win7-64"
+      mixins: "infra ci"
       dimensions: "os:Windows-7-SP1"
       dimensions: "cpu:x86-64"
     }
-
     builders {
-      name: "infra-continuous-win10-64"
-      dimensions: "os:Windows-10"
-      dimensions: "cpu:x86-64"
+      name: "infra-continuous-win7-32"
+      mixins: "infra ci"
+      dimensions: "os:Windows-7-SP1"
+      dimensions: "cpu:x86-32"
     }
+
+    # TODO(tandrii): add hardware and re-enable.
+    # builders {
+    #   name: "infra-continuous-win10-64"
+    #   mixins: "infra ci"
+    #   dimensions: "os:Windows-10"
+    #   dimensions: "cpu:x86-64"
+    # }
+
+
+    # TODO(tandrii): luci-gae + luci-go.
   }
 }
 
