--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -1,59 +1,59 @@
-ID: "infra"
+consoles: {
+  id: "infra"
+  name: "infra/infra repository console"
+  repo_url: "https://chromium.googlesource.com/infra/infra"
+  ref: "refs/heads/master"
+  manifest_name: "REVISION"
 
-Consoles: {
-  ID: "infra"
-  Name: "infra/infra repository console"
-  RepoURL: "https://chromium.googlesource.com/infra/infra"
-  Ref: "refs/heads/master"
-  ManifestName: "REVISION"
+  # TODO(tAndrii): add header.
 
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-zesty-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-zesty-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-yakkety-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-yakkety-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-xenial-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-xenial-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-trusty-32"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-trusty-32"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-precise-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-precise-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-precise-32"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-precise-32"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.13-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.13-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.12-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.12-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.11-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.11-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.10-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.10-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.9-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.9-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-win7-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-win7-64"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-win7-32"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-win7-32"
   }
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-win10-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-win10-64"
   }
 }
 
