Add new infra console with side-by-side LUCI and Buildbot.
TBR=hinoka@chromium.org

Bug: 767690
Change-Id: I6a69cb8d57fc30fbddbc32d9657327ac88e69a7b
Reviewed-on: https://chromium-review.googlesource.com/724023
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>
Commit-Queue: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -56,3 +56,18 @@ Consoles: {
     Name: "buildbucket/luci.infra.ci/infra-continuous-win10-64"
   }
 }
+
+Consoles: {
+  ID: "infra-side-by-side"
+  Name: "infra/infra repository console LUCI along side Buildbot"
+  RepoURL: "https://chromium.googlesource.com/infra/infra"
+  Ref: "refs/heads/master"
+  ManifestName: "REVISION"
+
+  Builders: {
+    Name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
+  }
+  Builders: {
+    Name: "buildbot/chromium.infra/infra-continuous-trusty-64"
+  }
+}
